# grpc_bench

.github/workflows/: build.yml
haskell_hs_grpc_bench/: Dockerfile  Setup.hs  cabal.project  hs-grpc-bench.cabal
haskell_hs_grpc_bench/app/: Main.hs
haskell_hs_grpc_protosuite_bench/: Dockerfile  Makefile  cabal.project  hs-grpc-protosuite-bench.cabal
haskell_hs_grpc_protosuite_bench/app/: Main.hs
haskell_mu_bench/: Dockerfile  haskell-mu-bench.cabal
haskell_mu_bench/app/: Main.hs
