cabal-version:      2.4
name:               hs-grpc-bench
version:            0.1.0.0
author:             mu
maintainer:         mu@laxcat.xyz
build-type:         Custom
extra-source-files: helloworld.proto

custom-setup
  setup-depends:
    , base              >=4.5  && <5
    , Cabal             >=2.4  && <4
    , proto-lens-setup  ^>=0.4

executable haskell-hs-grpc-bench
  main-is:            Main.hs
  hs-source-dirs:     app
  build-depends:
    , base                >=4.13     && <5
    , bytestring
    , ghc-prim
    , hs-grpc-server
    , microlens
    , primitive
    , proto-lens          ^>=0.7.1.3
    , proto-lens-runtime  ^>=0.7.0.4

  build-tool-depends: proto-lens-protoc:proto-lens-protoc
  other-modules:
    Proto.Helloworld
    Proto.Helloworld_Fields

  autogen-modules:
    Proto.Helloworld
    Proto.Helloworld_Fields

  default-language:   Haskell2010
  ghc-options:
    -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts
