cabal-version:      2.4
name:               hs-grpc-protosuite-bench
version:            0.1.0.0
author:             mu
maintainer:         mu@laxcat.xyz
build-type:         Custom
extra-source-files: helloworld.proto

custom-setup
  setup-depends:
    , base              >=4.5  && <5
    , Cabal             >=2.4  && <4
    , proto-lens-setup  ^>=0.4

executable haskell-hs-grpc-protosuite-bench
  main-is:            Main.hs
  hs-source-dirs:     app src-gen
  build-depends:
    , base                >=4.13     && <5
    , bytestring
    , containers
    , deepseq
    , ghc-prim
    , hs-grpc-server
    , proto-lens          ^>=0.7.1.3
    , proto-lens-runtime  ^>=0.7.0.4
    , proto3-suite        ^>=0.6
    , proto3-wire         ^>=1.4
    , text
    , vector

  build-tool-depends: proto-lens-protoc:proto-lens-protoc
  other-modules:
    Helloworld
    Proto.Helloworld

  autogen-modules:
    Proto.Helloworld
    Helloworld

  default-language:   Haskell2010
  ghc-options:
    -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts
